--- a/summary.html
+++ b/summary.html
@@ -36,7 +36,7 @@
         <table>
           <th>Young Hacks Academy Summer Coding Camp: Collaborated on creating a video game while enhancing programming skills</th>
           <th>First Robotics, Co-Programmer of Team 3597: Contributed to the development of a complex robot and designed a double ramp system for high-level competition</th>
-        </table><br><br>Personal Website: <a href="https://kodair.on.fleek.co">kodair.on.fleek.co</a><br><br>Socials: <a href="https://ud.me/k00d00r00c00.wallet">k00d00r00c00.wallet</a><br><br>
+        </table><br><br>Personal Website: <a href="https://kodair.on.fleek.co">kodair.on.fleek.co</a><br><br>
         Let's connect and explore how we can make a positive impact through technology and storytelling!
       </p>
     </div>
