--- a/projects.html
+++ b/projects.html
@@ -4,23 +4,12 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Cover Letter - JCB</title>
+  <title>Projects - JCB</title>
   <link rel="icon" type="image/x-icon" href="jcb.png">
   <link rel="stylesheet" href="style.css">
-  <style>
-    
-  </style>
-  <script>
-    function updateHiringManager() {
-      var urlParams = new URLSearchParams(window.location.search);
-      var hiringManager = urlParams.get('q');
-      var hiringManagerElement = document.getElementById('hiringManager');
-      hiringManagerElement.textContent = hiringManager;
-    }
-  </script>
 </head>
 
-<body onload="updateHiringManager()">
+<body>
   <nav>
     <a href="index.html">Home</a>
     <a href="projects.html">Projects</a>
@@ -33,15 +22,20 @@
       </div>
     </div>
   </nav>
-  
+
   <div class="page">
-    <div class="content2">
-      <h1>Cover Letter</h1>
-      <p>
-        Dear <span id="hiringManager">[Hiring Manager]</span>,
-      </p>
-      <p>With a strong background in computer science, a passion for storytelling, and a keen interest in artificial intelligence, I am confident in my ability to contribute to your team.<br><br>Throughout my education and professional experiences, I have honed my skills in web development, with a focus on creating user-centric experiences. I believe in making the future more accessible by ensuring easy onboarding and delivering a seamless user experience. Combining my technical expertise with my creative problem-solving skills, I strive to develop innovative solutions that engage and delight users.<br><br>My perseverance, patience, and computational thinking enable me to tackle complex challenges effectively. I approach problem-solving with kindness and empathy, considering the needs of both users and stakeholders. I am driven to push boundaries and explore new possibilities, constantly seeking to enhance my skills and stay up-to-date with the latest industry trends.<br><br>Beyond web development, I have a passion for computer/electronic repair and any technological task involving innovative thinking. These interests, along with my interests in AI and storytelling, fuel my drive to create meaningful and impactful digital experiences.<br><br>In addition to my technical skills, I have been recognized for my academic achievements and leadership qualities. I have received a Certificate of Achievement from the National Youth Leadership Forum and have been named Student of the Month three times at Shapleigh School and Traip Academy. Furthermore, I have been listed on the President's List at York County Community College for maintaining a 4.0 GPA during full-time study. Notably, I also achieved 1st Place Regional Finalist at National History Day for my outstanding website on the history of Sputnik.<br><br>I have also actively participated in camps and clubs, such as the Young Hacks Academy Summer Coding Camp and First Robotics, where I served as a Co-Programmer on Team 3597. In this role, I collaborated with teammates to create a complex robot and contributed to the development of a robot that acted as a ramp, helping other robots reach high places during competitions.<br><br>To see my skills in action, please visit my personal website: <a href="https://kodair.on.fleek.co">kodair.on.fleek.co</a><br><br>Thank you for considering my application. I am excited about the opportunity to contribute my expertise and enthusiasm to your team. I look forward to discussing how my skills align with your organization's goals in further detail.<br><br>Sincerely,<br>John C. Barr
-      </p>
+    <div class="content3">
+      <h1>Projects</h1>
+      <ul>
+        <li>
+          <h2>Kodair</h2>
+          <p><a href="https://kodair.us">https://kodair.us</a>• Kodair is a fun website I maintain, which contains a wide collection of web apps. It's your place for everything!</p>
+        </li>
+        <li>
+          <h2>Nouriscan</h2>
+          <p><a href="https://nouriscan.streamlit.app">https://nouriscan.streamlit.app</a>• Nouriscan is an AI and database powered food scanning application that I built for a college project.</p>
+        </li>
+      </ul>
     </div>
   </div>
 
