--- a/resumefun.html
+++ b/resumefun.html
@@ -4,41 +4,29 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Summary - JCB</title>
+  <title>Projects - JCB</title>
   <link rel="icon" type="image/x-icon" href="jcb.png">
   <link rel="stylesheet" href="style.css">
-  <style>
-    /* CSS styles for the indeed summary page */
-    .content {
-      text-align: center;
-    }
-  </style>
 </head>
 
 <body>
   <nav>
     <a href="index.html">Home</a>
+    <a href="projects.html">Projects</a>
     <a href="cover-letter.html?q=Viewer">Cover Letter</a>
-    <a href="summary.html">Summary</a>
-    <a href="John C. Barr - 2023 Resume.pdf">Resume</a>
+    <div class="dropdown">
+      <button class="dropbtn">Resume</button>
+      <div class="dropdown-content">
+        <a href="resumepro.html">Professional Resume</a>
+        <a href="resumefun.html">Fun Resume</a>
+      </div>
+    </div>
   </nav>
-  
+
   <div class="page">
     <div class="content">
-      <h1>Summary</h1>
-      <p>Web Developer | AI Enthusiast | Storyteller<br><br>Passionate web developer and AI enthusiast with a talent for creating user-centric experiences. I believe in making the future more accessible by delivering easy onboarding and engaging digital solutions. My technical expertise, combined with my creative problem-solving skills, allows me to develop innovative and impactful applications.<br><br>Skills & Attributes: HTML, CSS, JavaScript, Perseverance, Patience, Creative Problem Solver, Kindness, Computational Thinker, and more<br><br>Interests and Hobbies: Web Development, Computer/Electronic Repair, Technological Tasks Involving Innovative Thinking, Music, and More<br>
-        <table>
-          <th>Certificate of Achievement from the National Youth Leadership Forum for dedication to educational achievement and leadership in STEM</th>
-          <th>Student of the Month (x3) at Shapleigh School and Traip Academy for outstanding academic performance</th>
-          <th>President's List at York County Community College for maintaining a 4.0 GPA during full-time study</th>
-          <th>1st Place Regional Finalist at National History Day for an outstanding website on the history of Sputnik</th>
-        </table><br><br>
-        <table>
-          <th>Young Hacks Academy Summer Coding Camp: Collaborated on creating a video game while enhancing programming skills</th>
-          <th>First Robotics, Co-Programmer of Team 3597: Contributed to the development of a complex robot and designed a double ramp system for high-level competition</th>
-        </table><br><br>Personal Website: <a href="https://kodair.on.fleek.co">kodair.on.fleek.co</a><br><br>
-        Let's connect and explore how we can make a positive impact through technology and storytelling!
-      </p>
+      <!-- Embed PDF for professional resume -->
+      <embed src="John C Barr - 2024 Resume (Fun Version).pdf" type="application/pdf" width="100%" height="600px" />
     </div>
   </div>
 
