--- a/resumepro.html
+++ b/resumepro.html
@@ -4,7 +4,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Projects - JCB</title>
+  <title>Pro Resume - JCB</title>
   <link rel="icon" type="image/x-icon" href="jcb.png">
   <link rel="stylesheet" href="style.css">
 </head>
