--- a/projects.html
+++ b/projects.html
@@ -35,6 +35,10 @@
           <h2>Nouriscan</h2>
           <p><a href="https://nouriscan.streamlit.app">https://nouriscan.streamlit.app</a>• Nouriscan is an AI and database powered food scanning application that I built for a college project.</p>
         </li>
+        <li>
+          <h2>Maine Cardworks</h2>
+          <p><a href="https://mainecardworks.kodair.us">https://mainecardworks.kodair.us</a>• Maine Cardworks is an e-commerce store for selling handmade cards made in Maine.</p>
+        </li>
       </ul>
     </div>
   </div>
