--- a/projects.html
+++ b/projects.html
@@ -7,20 +7,28 @@
   <title>Projects - JCB</title>
   <link rel="icon" type="image/x-icon" href="jcb.png">
   <link rel="stylesheet" href="style.css">
+  <script>
+    // Function to update iframe src and bottom h1 title
+    function loadProject(url, projectName) {
+      document.getElementById('projectWindow').src = url; // Update iframe src
+      document.querySelector('.sidemenu__header--bottom h1').innerText = projectName; // Update bottom panel h1
+    }
+  </script>
 </head>
 
 <body>
   <nav>
     <a href="index.html">Home</a>
-    <a href="projects.html">Projects</a>
-    <a href="cover-letter.html?q=Viewer">Cover Letter</a>
+    <label for="mobileMenuToggle" class="cursor-pointer">Projects</label>
+    <label for="topMenuToggle" class="cursor-pointer">Cover Letter</label>
     <div class="dropdown">
       <button class="dropbtn">Resume</button>
       <div class="dropdown-content">
-        <a href="resumepro.html">Professional Resume</a>
-        <a href="resumefun.html">Fun Resume</a>
+        <label for="bottomMenuToggle" class="cursor-pointer" onclick="loadProject('https://docs.google.com/document/d/1Z5gWP48ipRP2e_-2wDwDZvUGpzNYJL9iDdhDkdk4b5g/edit?usp=sharing?embedded=true', 'Professional Resume')">Professional Resume</label>
+        <label for="bottomMenuToggle" class="cursor-pointer" onclick="loadProject('https://docs.google.com/document/d/1L6mlLKZ1Yz5MIdzxKUKwqQRCJCH-6Xh6xosexP9XgXI/edit?usp=sharing?embedded=true', 'Fun Resume')">Fun Resume</label>
       </div>
     </div>
+    <label for="sideCartToggle" class="cursor-pointer">Contact</label>
   </nav>
 
   <div class="page">
@@ -43,6 +51,101 @@
     </div>
   </div>
 
+  <!-- Side Menu -->
+  <input id="mobileMenuToggle" class="sidemenu-toggle hidden" name="mobileMenu" type="checkbox"/>
+  <div class="sidemenu-container">
+    <aside id="mobileMenu" class="sidemenu sidemenu--mobile">
+      <div class="sidemenu__header sidemenu__header--cart">
+        <div class="sidemenu__header_content container">
+          <h1>Projects</h1>
+          <label for="mobileMenuToggle" class="cursor-pointer button" onclick="window.location.href='projects.html'">View All</label>
+        </div>
+      </div>
+      <div class="sidemenu__body sidemenu__body--mobile container">
+        <ul>
+          <li>
+            <h2>Kodair</h2>
+            <p><label for="bottomMenuToggle" class="cursor-pointer" onclick="loadProject('https://kodair.us', 'Kodair')"><a>https://kodair.us</a></label>• Kodair is a fun website I maintain, which contains a wide collection of web apps. It's your place for everything!</p>
+          </li>
+          <li>
+            <h2>Nouriscan</h2>
+            <p><label for="bottomMenuToggle" class="cursor-pointer" onclick="loadProject('https://nouriscan.streamlit.app?embed=true&embed_options=show_toolbar&embed_options=show_padding&embed_options=show_footer&embed_options=show_colored_line', 'Nouriscan')"><a>https://nouriscan.streamlit.app</a></label>• Nouriscan is an AI and database powered food scanning application that I built for a college project.</p>
+          </li>
+          <li>
+            <h2>Maine Cardworks</h2>
+            <p><label for="bottomMenuToggle" class="cursor-pointer" onclick="loadProject('https://mainecardworks.kodair.us', 'Maine CardWorks')"><a>https://mainecardworks.kodair.us</a></label>• Maine Cardworks is an e-commerce store for selling handmade cards made in Maine.</p>
+          </li>
+        </ul>
+      </div>
+    </aside>
+    <label for="mobileMenuToggle" class="sidemenu-overlay"></label>
+  </div>
+  
+  <!-- Side Cart -->
+  <input id="sideCartToggle" class="sidemenu-toggle hidden" name="sideCart" type="checkbox"/>
+  <div class="sidemenu-container">
+    <aside id="sideCart" class="sidemenu sidemenu--cart">
+      <div class="sidemenu__header sidemenu__header--cart">
+        <div class="sidemenu__header_content container">
+          <h1>Contact Me</h1>
+          <label for="sideCartToggle" class="cursor-pointer button">Close</label>
+        </div>
+      </div>
+      <div class="sidemenu__body sidemenu__body--mobile container">
+        <p>Coming Soon 🐠✨</p>
+      </div>
+      <div class="sidemenu__footer sidemenu__footer--cart">
+        <div class="sidemenu__footer-content sidemenu__footer-content--mobile container">
+          <div class="sidemenu__footer__button button button--accent cursor-pointer" onclick="window.location='card.html';">Coming Soon</div>
+        </div>
+      </div>
+    </aside>
+    <label for="sideCartToggle" class="sidemenu-overlay"></label>
+  </div>
+  
+  <!-- Top menu -->
+  <input id="topMenuToggle" class="sidemenu-toggle hidden" name="topMenu" type="checkbox"/>
+  <div class="sidemenu-container">
+    <aside id="topMenu" class="sidemenu sidemenu--top">
+      <div class="sidemenu__header sidemenu__header--top">
+        <div class="sidemenu__header_content container">
+          <h1 class="center">Cover Letter</h1>
+        </div>
+      </div>
+      <div class="sidemenu__body sidemenu__body--top container">
+        <div class="content2">
+          <p>
+            Dear viewer,
+          </p>
+          <p>With a strong background in computer science, a passion for storytelling, and a keen interest in artificial intelligence, I am confident in my ability to contribute to your team.<br><br>Throughout my education and professional experiences, I have honed my skills in web development, with a focus on creating user-centric experiences. I believe in making the future more accessible by ensuring easy onboarding and delivering a seamless user experience. Combining my technical expertise with my creative problem-solving skills, I strive to develop innovative solutions that engage and delight users.<br><br>My perseverance, patience, and computational thinking enable me to tackle complex challenges effectively. I approach problem-solving with kindness and empathy, considering the needs of both users and stakeholders. I am driven to push boundaries and explore new possibilities, constantly seeking to enhance my skills and stay up-to-date with the latest industry trends.<br><br>Beyond web development, I have a passion for computer/electronic repair and any technological task involving innovative thinking. These interests, along with my interests in AI and storytelling, fuel my drive to create meaningful and impactful digital experiences.<br><br>In addition to my technical skills, I have been recognized for my academic achievements and leadership qualities. I have received a Certificate of Achievement from the National Youth Leadership Forum and have been named Student of the Month three times at Shapleigh School and Traip Academy. Furthermore, I have been listed on the President's List at York County Community College for maintaining a 4.0 GPA during full-time study. Notably, I also achieved 1st Place Regional Finalist at National History Day for my outstanding website on the history of Sputnik.<br><br>I have also actively participated in camps and clubs, such as the Young Hacks Academy Summer Coding Camp and First Robotics, where I served as a Co-Programmer on Team 3597. In this role, I collaborated with teammates to create a complex robot and contributed to the development of a robot that acted as a ramp, helping other robots reach high places during competitions.<br><br>To see my skills in action, please visit my personal website: <a href="https://kodair.on.fleek.co">kodair.on.fleek.co</a><br><br>Thank you for considering my application. I am excited about the opportunity to contribute my expertise and enthusiasm to your team. I look forward to discussing how my skills align with your organization's goals in further detail.<br><br>Sincerely,<br>John C. Barr
+          </p>
+        </div>
+      </div>
+      <div class="sidemenu__footer sidemenu__footer--top">
+        <label for="topMenuToggle" class="cursor-pointer">
+          <div class="sidemenu__footer-content sidemenu__footer-content--top container center-text">
+            <span class="sidemenu--top__close-text text-lg">Close</span>
+          </div>
+        </label>
+      </div>
+    </aside>
+  </div>
+  
+  <!-- Bottom menu -->
+  <input id="bottomMenuToggle" class="sidemenu-toggle hidden" name="mobileMenu" type="checkbox"/>
+  <div class="sidemenu-container">
+    <aside id="bottomMenu" class="sidemenu sidemenu--bottom">
+      <div class="sidemenu__header sidemenu__header--bottom">
+        <div class="sidemenu__header_content sidemenu__header_content--bottom container center">
+          <h1 class="center">Bottom drawer</h1>
+          <label for="bottomMenuToggle" class="button button--outline">Close</label>
+        </div>
+      </div>
+      <iframe id="projectWindow" src=""></iframe>
+    </aside>
+    <label for="bottomMenuToggle" class="sidemenu-overlay"></label>
+  </div>
+  
   <footer>
     <div class="social-links">
       <a href="https://github.com/Farwalker3">
@@ -60,19 +163,21 @@
           <path d="M11.566 21.563v-8.762c.255.023.5.035.758.035c1.223 0 2.374-.32 3.35-.893v9.618c0 .822-.195 1.429-.575 1.834c-.378.403-.88.605-1.491.605c-.6 0-1.077-.202-1.468-.618c-.378-.403-.574-1.01-.574-1.819zM11.589.566c2.545-.893 5.442-.845 7.619.987c.405.369.867.833 1.051 1.38c.22.692-.77-.073-.906-.167c-.71-.453-1.418-.833-2.212-1.094C12.86.387 8.812 2.709 6.295 6.315c-1.052 1.594-1.737 3.272-2.3 5.117c-.06.202-.109.465-.22.642c-.112.203-.048-.546-.048-.57c.084-.763.244-1.5.441-2.237C5.33 5.337 7.897 2.066 11.59.566zm4.928 7.059a3.02 3.02 0 1 1-6.04 0a3.02 3.02 0 1 1 6.04 0Z"></path>
         </svg>
       </a>
+      <!--
       <a href="https://twitter.com/farwalker3">
-        <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" fill="currentColor" width="24" height="24">
-          <path d="M22.46 6c-.77.35-1.6.58-2.46.69c.88-.53 1.56-1.37 1.88-2.38c-.83.5-1.75.85-2.72 1.05C18.37 4.5 17.26 4 16 4c-2.35 0-4.27 1.92-4.27 4.29c0 .34.04.67.11.98C8.28 9.09 5.11 7.38 3 4.79c-.37.63-.58 1.37-.58 2.15c0 1.49.75 2.81 1.91 3.56c-.71 0-1.37-.2-1.95-.5v.03c0 2.08 1.48 3.82 3.44 4.21a4.22 4.22 0 0 1-1.93.07a4.28 4.28 0 0 0 4 2.98a8.521 8.521 0 0 1-5.33 1.84c-.34 0-.68-.02-1.02-.06C3.44 20.29 5.7 21 8.12 21C16 21 20.33 14.46 20.33 8.79c0-.19 0-.37-.01-.56c.84-.6 1.56-1.36 2.14-2.23Z"></path>
-        </svg>
+      <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" fill="currentColor" width="24" height="24">
+      <path d="M22.46 6c-.77.35-1.6.58-2.46.69c.88-.53 1.56-1.37 1.88-2.38c-.83.5-1.75.85-2.72 1.05C18.37 4.5 17.26 4 16 4c-2.35 0-4.27 1.92-4.27 4.29c0 .34.04.67.11.98C8.28 9.09 5.11 7.38 3 4.79c-.37.63-.58 1.37-.58 2.15c0 1.49.75 2.81 1.91 3.56c-.71 0-1.37-.2-1.95-.5v.03c0 2.08 1.48 3.82 3.44 4.21a4.22 4.22 0 0 1-1.93.07a4.28 4.28 0 0 0 4 2.98a8.521 8.521 0 0 1-5.33 1.84c-.34 0-.68-.02-1.02-.06C3.44 20.29 5.7 21 8.12 21C16 21 20.33 14.46 20.33 8.79c0-.19 0-.37-.01-.56c.84-.6 1.56-1.36 2.14-2.23Z"></path>
+      </svg>
       </a>
       <a href="https://www.youtube.com/channel/UCmGuFTo3xeeGQ9lOpaa5Qjg">
-        <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" fill="currentColor" width="24" height="24">
-          <path d="m10 15l5.19-3L10 9v6m11.56-7.83c.13.47.22 1.1.28 1.9c.07.8.1 1.49.1 2.09L22 12c0 2.19-.16 3.8-.44 4.83c-.25.9-.83 1.48-1.73 1.73c-.47.13-1.33.22-2.65.28c-1.3.07-2.49.1-3.59.1L12 19c-4.19 0-6.8-.16-7.83-.44c-.9-.25-1.48-.83-1.73-1.73c-.13-.47-.22-1.1-.28-1.9c-.07-.8-.1-1.49-.1-2.09L2 12c0-2.19.16-3.8.44-4.83c.25-.9.83-1.48 1.73-1.73c.47-.13 1.33-.22 2.65-.28c1.3-.07 2.49-.1 3.59-.1L12 5c4.19 0 6.8.16 7.83.44c.9.25 1.48.83 1.73 1.73Z"></path>
-        </svg>
+      <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" fill="currentColor" width="24" height="24">
+      <path d="m10 15l5.19-3L10 9v6m11.56-7.83c.13.47.22 1.1.28 1.9c.07.8.1 1.49.1 2.09L22 12c0 2.19-.16 3.8-.44 4.83c-.25.9-.83 1.48-1.73 1.73c-.47.13-1.33.22-2.65.28c-1.3.07-2.49.1-3.59.1L12 19c-4.19 0-6.8-.16-7.83-.44c-.9-.25-1.48-.83-1.73-1.73c-.13-.47-.22-1.1-.28-1.9c-.07-.8-.1-1.49-.1-2.09L2 12c0-2.19.16-3.8.44-4.83c.25-.9.83-1.48 1.73-1.73c.47-.13 1.33-.22 2.65-.28c1.3-.07 2.49-.1 3.59-.1L12 5c4.19 0 6.8.16 7.83.44c.9.25 1.48.83 1.73 1.73Z"></path>
+      </svg>
       </a>
+      -->
       <!-- Add more social links as needed -->
     </div>
   </footer>
 </body>
-
+  
 </html>
