--- a/index.html
+++ b/index.html
@@ -28,7 +28,6 @@
         <label for="bottomMenuToggle" class="cursor-pointer" onclick="loadProject('https://docs.google.com/document/d/1L6mlLKZ1Yz5MIdzxKUKwqQRCJCH-6Xh6xosexP9XgXI/edit?usp=sharing?embedded=true', 'Fun Resume')">Fun Resume</label>
       </div>
     </div>
-    <label for="sideCartToggle" class="cursor-pointer">Contact</label>
   </nav>
   
   <div class="page">
@@ -152,6 +151,11 @@
           <path d="M11.566 21.563v-8.762c.255.023.5.035.758.035c1.223 0 2.374-.32 3.35-.893v9.618c0 .822-.195 1.429-.575 1.834c-.378.403-.88.605-1.491.605c-.6 0-1.077-.202-1.468-.618c-.378-.403-.574-1.01-.574-1.819zM11.589.566c2.545-.893 5.442-.845 7.619.987c.405.369.867.833 1.051 1.38c.22.692-.77-.073-.906-.167c-.71-.453-1.418-.833-2.212-1.094C12.86.387 8.812 2.709 6.295 6.315c-1.052 1.594-1.737 3.272-2.3 5.117c-.06.202-.109.465-.22.642c-.112.203-.048-.546-.048-.57c.084-.763.244-1.5.441-2.237C5.33 5.337 7.897 2.066 11.59.566zm4.928 7.059a3.02 3.02 0 1 1-6.04 0a3.02 3.02 0 1 1 6.04 0Z"></path>
         </svg>
       </a>
+      <label for="sideCartToggle" class="cursor-pointer">
+        <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" fill="currentColor" width="24" height="24">
+          <path fill="currentColor" d="M22 6c0-1.1-.9-2-2-2H4c-1.1 0-2 .9-2 2v12c0 1.1.9 2 2 2h16c1.1 0 2-.9 2-2zm-2 0l-8 5l-8-5zm0 12H4V8l8 5l8-5z"></path>
+        </svg>
+      </label>
       <!--
       <a href="https://twitter.com/farwalker3">
         <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" fill="currentColor" width="24" height="24">
