--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@
               </li>
               <li>
                 <h2>Maine Cardworks</h2>
-                <p><label for="bottomMenuToggle" class="cursor-pointer" onclick="loadProject('https://mainecardworks.kodair.us', 'Maine CardWorks')"><a>https://mainecardworks.kodair.us</a></label>• Maine Cardworks is an e-commerce store for selling handmade cards made in Maine.</p>
+                <p><label for="bottomMenuToggle" class="cursor-pointer" onclick="loadProject('https://www.mainecardworks.com', 'Maine CardWorks')"><a>https://www.mainecardworks.com</a></label>• Maine Cardworks is an e-commerce store for selling handmade cards made in Maine.</p>
               </li>
             </ul>
       </div>
@@ -139,6 +139,11 @@
       <a href="https://github.com/Farwalker3">
         <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" fill="currentColor" width="24" height="24">
           <path d="M12 2A10 10 0 0 0 2 12c0 4.42 2.87 8.17 6.84 9.5c.5.08.66-.23.66-.5v-1.69c-2.77.6-3.36-1.34-3.36-1.34c-.46-1.16-1.11-1.47-1.11-1.47c-.91-.62.07-.6.07-.6c1 .07 1.53 1.03 1.53 1.03c.87 1.52 2.34 1.07 2.91.83c.09-.65.35-1.09.63-1.34c-2.22-.25-4.55-1.11-4.55-4.92c0-1.11.38-2 1.03-2.71c-.1-.25-.45-1.29.1-2.64c0 0 .84-.27 2.75 1.02c.79-.22 1.65-.33 2.5-.33c.85 0 1.71.11 2.5.33c1.91-1.29 2.75-1.02 2.75-1.02c.55 1.35.2 2.39.1 2.64c.65.71 1.03 1.6 1.03 2.71c0 3.82-2.34 4.66-4.57 4.91c.36.31.69.92.69 1.85V21c0 .27.16.59.67.5C19.14 20.16 22 16.42 22 12A10 10 0 0 0 12 2Z"></path>
+        </svg>
+      </a>
+      <a href="https://www.youtube.com/channel/UCmGuFTo3xeeGQ9lOpaa5Qjg">
+        <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" fill="currentColor" width="24" height="24">
+          <path d="m10 15l5.19-3L10 9v6m11.56-7.83c.13.47.22 1.1.28 1.9c.07.8.1 1.49.1 2.09L22 12c0 2.19-.16 3.8-.44 4.83c-.25.9-.83 1.48-1.73 1.73c-.47.13-1.33.22-2.65.28c-1.3.07-2.49.1-3.59.1L12 19c-4.19 0-6.8-.16-7.83-.44c-.9-.25-1.48-.83-1.73-1.73c-.13-.47-.22-1.1-.28-1.9c-.07-.8-.1-1.49-.1-2.09L2 12c0-2.19.16-3.8.44-4.83c.25-.9.83-1.48 1.73-1.73c.47-.13 1.33-.22 2.65-.28c1.3-.07 2.49-.1 3.59-.1L12 5c4.19 0 6.8.16 7.83.44c.9.25 1.48.83 1.73 1.73Z"></path>
         </svg>
       </a>
       <a href="https://www.linkedin.com/in/johncbarr/">
