--- a/v2/aboutme.html
+++ b/v2/aboutme.html
@@ -2,9 +2,9 @@
 <html>
 	<head>
 		<meta charset="UTF-8">
-		<title></title>
+		<title>About Me Timeline</title>
 	</head>
 	<body>
-		
+		<div></div>
 	</body>
 </html>
